[project]
name = "apiclient-structurata"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "respx>=0.23.1",
    "wemake-python-styleguide>=1.6.2",
]
